--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,7 @@
     <string name="ok">OK</string>
     <string name="add">Add</string>
     <string name="version">Version</string>
-    <string name="version_code" translatable="false">1.2</string>
+    <string name="version_code" translatable="false">1.3</string>
     <string name="github" translatable="false">Github</string>
     <string name="project_homepage" translatable="false">https://github.com/drunlin/webappbox</string>
     <string name="developer">Developer</string>
@@ -106,4 +106,6 @@
     <string name="pattern_summary">Links that are not matched are opened in other apps</string>
     <string name="rule_summary">Set special rules for pages</string>
     <string name="preview">Preview</string>
+    <string name="text_zoom">Text zoom</string>
+    <string name="text_zoom_summary" translatable="false">%d%%</string>
 </resources>
